--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -66,23 +66,23 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                        <a href="#Summary"><i class="fa fa-fw fa-dashboard"></i> {{ languages.Summary }}</a>
+                        <a href="#Summary"><i class="fa fa-fw fa-dashboard"></i> Summary</a>
                     </li>
 
                     <li>
-                        <a href="#CPUCharts"><i class="icon-cpu-processor"></i> {{ languages.CPU }}</a>
+                        <a href="#CPUCharts"><i class="icon-cpu-processor"></i> CPU</a>
                     </li>
 
                     <li>
-                        <a href="#MemoryCharts"><i class="icon-ram"></i> {{ languages.Memory }}</a>
+                        <a href="#MemoryCharts"><i class="icon-ram"></i> Memory</a>
                     </li>
 
                     <li>
-                        <a href="#IOCharts"><i class="icon-syncalt"></i> {{ languages.IO }}</a>
+                        <a href="#IOCharts"><i class="icon-syncalt"></i> IO</a>
                     </li>
 
                     <li>
-                        <a href="#PerfCharts"><i class="glyphicon glyphicon-tasks"></i> {{ languages.Perf }}</a>
+                        <a href="#PerfCharts"><i class="glyphicon glyphicon-tasks"></i> Perf</a>
                     </li>
 
                     <li>
@@ -103,7 +103,7 @@
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <i class="fa fa-fw fa-dashboard"></i> {{ languages.SystemSummary }}
+                                <i class="fa fa-fw fa-dashboard"></i> 系统概况
                             </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
@@ -113,11 +113,7 @@
                                             <div id="div-cpu-gauge"></div>
 
                                             <div class="panel-footer text-center">
-                                                {% if config == 'debug' %}
-                                                处理器 - [GetCmdMpstat]
-                                                {% else %}
                                                 处理器
-                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
@@ -125,11 +121,7 @@
                                         <div class="panel panel-primary">
                                             <div id="div-memory-gauge"></div>
                                             <div class="panel-footer text-center">
-                                                {% if config == 'debug' %}
-                                                内存 - [GetProcMeminfo]
-                                                {% else %}
                                                 内存
-                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
@@ -137,11 +129,7 @@
                                         <div class="panel panel-primary">
                                             <div id="div-io-gauge"></div>
                                             <div class="panel-footer text-center">
-                                                {% if config == 'debug' %}
-                                                磁盘 - [GetCmdIostat]
-                                                {% else %}
                                                 磁盘
-                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
@@ -149,25 +137,16 @@
 
                                 <div class="row">
                                     <div class="col-lg-3">
-                                        {% if config == 'debug' %}
-                                        <div>[GetProcCpuinfo]</div>
-                                        {% endif %}
                                         <div id="div-cpu-summary" class="panel panel-green">
                                         </div>
                                     </div>
 
                                     <div class="col-lg-3">
-                                        {% if config == 'debug' %}
-                                        <div>[GetProcMeminfo]</div>
-                                        {% endif %}
                                         <div id="div-memory-summary" class="panel panel-green">
                                         </div>
                                     </div>
 
                                     <div class="col-lg-3">
-                                        {% if config == 'debug' %}
-                                        <div>[GetCmdDf]</div>
-                                        {% endif %}
                                         <div id="div-io-summary" class="panel panel-green">
                                         </div>
                                     </div>
