--- a/web/public/html/test/testhome.html
+++ b/web/public/html/test/testhome.html
@@ -154,7 +154,7 @@
         <div class="container-fluid">
 
             <div class="row">
-                <a href="/test/api">
+                <a href="test/api">
                     <div class="col-lg-4 col-md-6">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
