relocate the swagger files to make better sense.
now we are ready to write api documentation with swagger.

--- a/web/public/html/swagger.html
+++ b/web/public/html/swagger.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "lepv-apis.json";
+        url = "/docs/lepv-apis.json";
       }
 
       hljs.configure({
