more cpu charts are working.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -610,6 +610,7 @@
         $('#labelBanner').text(bannerLabel);
 
         loadAverageLoadChart(server);
+        loadCpuCharts(server);
 
         $('[data-toggle="tooltip"]').tooltip();
 
