update GetCmdProcrank method so we get summary information.
will test more to make sure it works.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -613,12 +613,12 @@
 //        loadCapacityData(server);
 //        loadCpuTopTable(server);
 
-        loadIoChart(server);
+//        loadIoChart(server);
 //        loadIoTopTable(server);
 //        loadMemoryChart(server);
 //        loadAverageLoadChart(server);
 //        loadPerfCpuTable(server);
-//        loadProcrankCharts(server);
+        loadProcrankCharts(server);
 
         $('[data-toggle="tooltip"]').tooltip();
 
