fix cpu top table.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -609,15 +609,15 @@
         bannerLabel += "Watching " + server;
         $('#labelBanner').text(bannerLabel);
 
-//        loadCpuCharts(server);
-//        loadCapacityData(server);
-//        loadCpuTopTable(server);
+        loadCpuCharts(server);
+        loadCapacityData(server);
+        loadCpuTopTable(server);
 
-//        loadIoChart(server);
-//        loadIoTopTable(server);
-//        loadMemoryChart(server);
-//        loadAverageLoadChart(server);
-//        loadPerfCpuTable(server);
+        loadIoChart(server);
+        loadIoTopTable(server);
+        loadMemoryChart(server);
+        loadAverageLoadChart(server);
+        loadPerfCpuTable(server);
         loadProcrankCharts(server);
 
         $('[data-toggle="tooltip"]').tooltip();
