introducing bower to LEPV.
with bower, we can manage the front end packages in a more manageable manner

and I'd like to take this chance to clean up obsolete packages.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -15,7 +15,7 @@
     <title>LEP - Linux Performance Visualizer & Analyzer</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--<link href="/whhg-font/css/whhg.css" rel="stylesheet">-->
     <link href="/css/bootstrap-language.min.css" rel="stylesheet">
 
