fix the glyph issue.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -24,6 +24,7 @@
     <link href="/css/plugins/morris.css" rel="stylesheet">
 
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/whhg-font/css/whhg.css" rel="stylesheet">
 
     <link href="/js/jquery-ui.min.css" rel="stylesheet" type="text/css">
     <link href="/css/language/languages.min.css" rel="stylesheet" type="text/css">
@@ -273,6 +274,7 @@
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
+                                <i class="icon-cpu-processor"></i>
                                 <span class="spanTitle"
                                       fullTitle="CPU TOP"
                                       shortTitle="CPU TOP">CPU TOP</span>
