--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -493,11 +493,12 @@
     </div>
     
     <script src="/components/jquery/dist/jquery.min.js"></script>
+
+    <script src="/node/socket.io-client/dist/socket.io.js"></script>
+
     <script src="/js/jquery-ui.min.js"></script>
 
     <script src="/components/datatables/media/js/jquery.dataTables.min.js"></script>
-
-    <!-- Load d3.js and c3.js -->
 
     <script src="/components/c3/d3.min.js" charset="utf-8"></script>
     <script src="/components/c3/c3.min.js"></script>
