--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -623,16 +623,16 @@
         const lepvServerUrl = window.location.origin;  // something like 'http://localhost:8889'
         const socket = io.connect(lepvServerUrl);
 
-//        loadCpuCharts(server, socket);
-//        loadCapacityData(server, socket);
-//        loadCpuTopTable(server, socket);
-//
-//        loadIoChart(server, socket);
-//        loadIoTopTable(server, socket);
-//        loadMemoryChart(server, socket);
-//        loadAverageLoadChart(server, socket);
+        loadCpuCharts(server, socket);
+        loadCapacityData(server, socket);
+        loadCpuTopTable(server, socket);
+
+        loadIoChart(server, socket);
+        loadIoTopTable(server, socket);
+        loadMemoryChart(server, socket);
+        loadAverageLoadChart(server, socket);
         loadPerfCpuTable(server, socket);
-//        loadProcrankCharts(server, socket);
+        loadProcrankCharts(server, socket);
 
         $('[data-toggle="tooltip"]').tooltip();
 
