ready to do more refactoring to routing.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -27,7 +27,7 @@
     <link href="/whhg-font/css/whhg.css" rel="stylesheet">
 
     <link href="/js/jquery-ui.min.css" rel="stylesheet" type="text/css">
-    <!--<link href="/css/language/languages.min.css" rel="stylesheet" type="text/css">-->
+    <link href="/css/language/languages.min.css" rel="stylesheet" type="text/css">
 
     <!-- DataTable -->
     <link href="/components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
