--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -100,6 +100,29 @@
 
             <div class="container-fluid">
 
+                <div id='SummaryCPU' class="row anchor_div">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <i class="fa fa-fw fa-dashboard"></i> 系统概况: 处理器
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div id="div_summary_cpu" class="panel-body">
+
+                                <div id='div_summary_cpu_gauges' class="row">
+                                </div>
+
+                                <div id='div_summary_cpu_details' class="row">
+                                </div>
+
+                            </div>
+
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+                </div>
+
                 <div id='Summary' class="row anchor_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
@@ -108,6 +131,7 @@
                             </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
+
                                 <div class="row">
                                     <div class="col-lg-3">
                                         <div class="panel panel-primary">
@@ -160,8 +184,6 @@
                         </div>
                         <!-- /.panel -->
                     </div>
-                    <!-- /.col-lg-8 -->
-                    <!-- /.col-lg-4 -->
                 </div>
 
 
@@ -531,6 +553,7 @@
     <script src="/lib/lepvCpuCharts.js"></script>
 
     <script src="/lib/cpuCapacityLoader.js"></script>
+    <script src="/lib/summaryLoader.js"></script>
     
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -585,6 +608,9 @@
         }
         
         function loadCapacityData(server, socket) {
+
+//            var cpuSummaryLoader = new SummaryLoader('');
+//            cpuSummaryLoader.initialize();
 
 //            const cpuCapacityLoader = new CpuCapacityLoader('div-cpu-capacity-summary');
 //            cpuCapacityLoader.start(server);
