--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -552,8 +552,8 @@
     <script src="/lib/lepvCpuLineChart.js"></script>
     <script src="/lib/lepvCpuCharts.js"></script>
 
-    <script src="/lib/cpuCapacityLoader.js"></script>
     <script src="/lib/summaryLoader.js"></script>
+    <script src="/lib/cpuSummaryLoader.js"></script>
     
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
