hardcoded prototype for cpu summary info.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -112,7 +112,51 @@
                                 <div id='div_summary_cpu_gauges' class="row">
                                 </div>
 
-                                <div id='div_summary_cpu_details' class="row">
+                                <div class="row">
+
+                                    <div class="col-lg-6">
+
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">Core ID</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="0">
+                                        </div>
+
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">Model</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="QEMU Virtual CPU version 2.0.0">
+                                        </div>
+
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">MHZ</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="2593.737">
+                                        </div>
+
+                                        <div class="input-group">
+                                            <span class="input-group-addon">cache size</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="512 KB">
+                                        </div>
+
+                                    </div>
+
+                                    <div class="col-lg-6">
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">bogomips</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="5187.47">
+                                        </div>
+
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">Vendor</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="AuthenticAMD">
+                                        </div>
+
+                                        <div class="input-group summary-group">
+                                            <span class="input-group-addon">cpu family</span>
+                                            <input type="text" class="form-control" name="msg" placeholder="6">
+                                        </div>
+
+                                    </div>
+
+
                                 </div>
 
                             </div>
