--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -100,7 +100,7 @@
 
             <div class="container-fluid">
 
-                <div id='SummaryCPU' class="row anchor_div">
+                <div id='SummaryCPU' class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
 
-                <div id='SummaryMemory' class="row anchor_div">
+                <div id='SummaryMemory' class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -176,9 +176,9 @@
                             <!-- /.panel-heading -->
                             <div id="div_summary_memory" class="panel-body">
 
-                                <div class="col-lg-2">
+                                <div class="col-lg-2 gauge-div">
                                     <div class="panel panel-primary">
-                                        <div id='div_summary_memory_gauges'>
+                                        <div id='div_summary_memory_gauges' class="gauge-div">
                                         </div>
 
                                         <div class="panel-footer text-center">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
 
-                <div id='SummaryIO' class="row anchor_div">
+                <div id='SummaryIO' class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -219,37 +219,6 @@
                                 <div id='div_io_gauges' class="row">
                                 </div>
 
-                                <div class="row">
-
-                                    <div class="col-lg-6">
-
-                                        <div class="input-group summary-group">
-                                            <span class="input-group-addon">/dev</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="114.1M">
-                                        </div>
-
-                                        <div class="input-group summary-group">
-                                            <span class="input-group-addon">/run</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="23.5M">
-                                        </div>
-
-                                    </div>
-
-                                    <div class="col-lg-6">
-                                        <div class="input-group summary-group">
-                                            <span class="input-group-addon">/</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="1.2G">
-                                        </div>
-
-                                        <div class="input-group">
-                                            <span class="input-group-addon">/run/user</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="100 MB">
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
                             </div>
 
                             <!-- /.panel-body -->
@@ -258,71 +227,7 @@
                     </div>
                 </div>
 
-                <div id='Summary' class="row anchor_div">
-                    <div class="col-lg-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <i class="fa fa-fw fa-dashboard"></i> 系统概况
-                            </div>
-                            <!-- /.panel-heading -->
-                            <div class="panel-body">
-
-                                <div class="row">
-                                    <div class="col-lg-3">
-                                        <div class="panel panel-primary">
-                                            <div id="div-cpu-gauge"></div>
-
-                                            <div class="panel-footer text-center">
-                                                处理器
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="panel panel-primary">
-                                            <div id="div-memory-gauge"></div>
-                                            <div class="panel-footer text-center">
-                                                内存
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="panel panel-primary">
-                                            <div id="div-io-gauge"></div>
-                                            <div class="panel-footer text-center">
-                                                磁盘
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-lg-3">
-                                        <div id="div-cpu-summary" class="panel panel-green">
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3">
-                                        <div id="div-memory-summary" class="panel panel-green">
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3">
-                                        <div id="div-io-summary" class="panel panel-green">
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-                            </div>
-                            <!-- /.panel-body -->
-                        </div>
-                        <!-- /.panel -->
-                    </div>
-                </div>
-
-
-                <div id='CPUCharts' class="row anchor_div">
+                <div id='CPUCharts' class="row anchor_div summary_div">
                     <div class="col-lg-6">
                         <div id="div-cpu-stat-overall-container" class="panel panel-default">
                             <div class="panel-heading">
@@ -452,7 +357,7 @@
                     </div>
                 </div>
 
-                <div id='MemoryCharts' class="row anchor_div">
+                <div id='MemoryCharts' class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -531,7 +436,7 @@
                     </div>
                 </div>
 
-                <div id='IOCharts' class="row anchor_div">
+                <div id='IOCharts' class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -574,7 +479,7 @@
                     </div>
                 </div>
 
-                <div id="PerfCharts" class="row anchor_div">
+                <div id="PerfCharts" class="row anchor_div summary_div">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
