--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -100,7 +100,7 @@
 
             <div class="container-fluid">
 
-                <div id='SummaryCPU' class="row anchor_div summary_div">
+                <div id='SummaryCPU' class="row anchor_div summary_div padding-horizontal-close">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -118,22 +118,22 @@
 
                                         <div class="input-group summary-group">
                                             <span class="input-group-addon">Core ID</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="0">
+                                            <input id="input-cpu-core-id" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                         <div class="input-group summary-group">
                                             <span class="input-group-addon">Model</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="QEMU Virtual CPU version 2.0.0">
+                                            <input id="input-cpu-model" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                         <div class="input-group summary-group">
-                                            <span class="input-group-addon">MHZ</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="2593.737">
+                                            <span class="input-group-addon">Speed</span>
+                                            <input id="input-cpu-speed" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                         <div class="input-group">
-                                            <span class="input-group-addon">cache size</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="512 KB">
+                                            <span class="input-group-addon">Cache Size</span>
+                                            <input id="input-cpu-cache-size" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                     </div>
@@ -141,17 +141,17 @@
                                     <div class="col-lg-6">
                                         <div class="input-group summary-group">
                                             <span class="input-group-addon">bogomips</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="5187.47">
+                                            <input id="input-cpu-bogomips" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                         <div class="input-group summary-group">
                                             <span class="input-group-addon">Vendor</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="AuthenticAMD">
+                                            <input id="input-cpu-vendor" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                         <div class="input-group summary-group">
                                             <span class="input-group-addon">cpu family</span>
-                                            <input type="text" class="form-control" name="msg" placeholder="6">
+                                            <input id="input-cpu-family" type="text" class="form-control" name="msg" placeholder="">
                                         </div>
 
                                     </div>
