--- a/web/public/html/test/performance.html
+++ b/web/public/html/test/performance.html
@@ -33,23 +33,26 @@
 
     <link href="/css/lepv.css" rel="stylesheet" type="text/css">
 
+    <script src="/components/jquery/dist/jquery.min.js"></script>
+
     <script>
-        $( document ).ready(function() {
-            loadMethodMap();
+        $(document).ready(function() {
+            loadMethods();
         });
     </script>
 
     <script>
-        function loadMethodMap() {
-            $.get('/methodmap').success(
-                    function(methodMap) {
+        function loadMethods() {
+            var server = $('#txtServer').val();
+            $.get('/command/list/' + server).success(
+                    function(commands) {
                         
                         // clear the list first
                         
                         // load method names to the list
-                        $.each( methodMap, function( i, methodItem ) {
+                        $.each( commands, function( i, command ) {
 
-                            var option = new Option(methodItem['lepdMethod'], methodItem['lepdMethod']);
+                            var option = new Option(command, command);
                             $('#methodSelect').append($(option));
                         })
                     }
@@ -77,7 +80,7 @@
             var server = $('#txtServer').val();
             var command = $('#methodSelect').val();
 
-            $("#divResults").empty();
+            $("#divResultChart").empty();
 
             var commandUrl = '/command/' + server + '/' + command;
             $.get(commandUrl, function(responseData, status) {
@@ -101,9 +104,6 @@
                         <div class="panel-heading">
                             <a href="/test">Back To Main Test Page</a>
                         </div>
-                        <div class="panel-heading">
-                            <i class="icon-syncalt"></i> LEPV/LEPD Request Testing
-                        </div>
                         <div class="panel-body">
 
                             <form role="form">
@@ -112,19 +112,13 @@
 
                                     <div class="form-group">
                                         <label>Server</label>
-                                        <input id="txtServer" type="text" class="form-control" placeholder="{{ server|default:"www.readeeper.com" }}" value="{{ server|default:"www.readeeper.com" }}"/>
+                                        <input id="txtServer" type="text" class="form-control" placeholder="www.linuxxueyuan.com" value="www.linuxxueyuan.com"/>
                                     </div>
 
                                     <div class="form-group">
-                                        <label >Methods</label>
+                                        <label >LEPD Commands</label>
                                         <select id="methodSelect" class="form-control">
                                         </select>
-                                    </div>
-
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox">Disabled Checkbox
-                                        </label>
                                     </div>
 
                                     <button type="submit" class="btn btn-primary" onclick="testing()">Start Testing</button>
@@ -138,7 +132,8 @@
                 </div>
             </div>
 
-            <div id="divResults">
+            <div id="divResultChart">
+
             </div>
 
         </div>
