cpu chart works.

--- a/web/public/html/index.html
+++ b/web/public/html/index.html
@@ -568,7 +568,6 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script src="/js/lepv.js"></script>
     <script src="/js/timer.jquery.min.js"></script>
 
     <script src="/lib/capacityLoader.js"></script>
@@ -606,6 +605,8 @@
     
     <script>
         $( document ).ready(function() {
+
+
             showConfigPage();
         });
     </script>
@@ -697,13 +698,13 @@
 //        loadCapacityData(server, socket);
 
 
-        loadCpuTopTable(server, socket);
-        loadIoChart(server, socket);
-        loadIoTopTable(server, socket);
-        loadMemoryChart(server, socket);
-        loadAverageLoadChart(server, socket);
-        loadPerfCpuTable(server, socket);
-        loadProcrankCharts(server, socket);
+//        loadCpuTopTable(server, socket);
+//        loadIoChart(server, socket);
+//        loadIoTopTable(server, socket);
+//        loadMemoryChart(server, socket);
+//        loadAverageLoadChart(server, socket);
+//        loadPerfCpuTable(server, socket);
+//        loadProcrankCharts(server, socket);
 
         $('[data-toggle="tooltip"]').tooltip();
 
