--- a/web/public/html/test/testhome.html
+++ b/web/public/html/test/testhome.html
@@ -226,6 +226,36 @@
                     </div>
                 </a>
             </div>
+
+
+
+
+            <div class="row">
+                <a href="test/socket">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-comments fa-5x"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-right">
+                                        <div class="huge">Socket.IO</div>
+                                        <div>Socket.IO Messages Tests</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="panel-footer">
+                                <span class="pull-left">Go</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
             
         </div>
 
